# software-engineering-review-crew

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/code_review_crew/: README.md  crew.py
src/code_review_crew/config/: agents.yaml  tasks.yaml
src/code_review_crew/tools/: __init__.py  code_quality_tool.py  design_patterns_tool.py  solid_analyzer_tool.py
test_cases/: quick_test.py
