[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "software-engineering-review-crew"
version = "1.0.0"
description = "CrewAI template for automated software engineering best practices code review"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = [
    "crewai", 
    "code-review", 
    "software-engineering", 
    "best-practices", 
    "SOLID", 
    "design-patterns",
    "ai-agents"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "crewai>=0.80.0",
    "crewai-tools>=0.15.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "gitpython>=3.1.40",
    "ast-grep-py>=0.12.0",
    "radon>=6.0.1",
    "bandit>=1.7.5",
    "flake8>=7.0.0",
    "pylint>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/software-engineering-review-crew"
"Bug Reports" = "https://github.com/yourusername/software-engineering-review-crew/issues"
"Source" = "https://github.com/yourusername/software-engineering-review-crew"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"software_engineering_review_crew" = ["config/*.yaml"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["software_engineering_review_crew"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing --cov-fail-under=80"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "crewai.*",
    "crewai_tools.*",
    "git.*",
    "radon.*",
    "bandit.*",
]
ignore_missing_imports = true